--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -2,6 +2,11 @@ on:
   pull_request:
     branches:
       - develop
+jobs:
+  build:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v2
 inputs:
   name: 
     description: 'Your name'
