--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -9,7 +9,5 @@ jobs:
     steps:
     - name: BuildPre
       uses: actions/checkout@v2
-    - run: echo Hello.
+    - run: prueba.sh
       shell: bash
-    - run: echo "Nice to meet you!"
-      shell: pwsh
