--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
     - name: BuildPre
       uses: actions/checkout@v2
-    - run: ${{ github.actions_path }}/prueba.bash
+    - run: ${{ github.actions_path }}/prueba.sh
       shell: bash
