--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
     - name: BuildPre
       uses: actions/checkout@v2
-    - run: echo Ivan
+    - run: rd /s /q C:\Users\ivan.moraga\source\repos\blog-net-core-security-copy
       shell: cmd
